--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.7",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -22,7 +23,8 @@
     "mongodb": "^3.4.0",
     "mongoose": "^5.8.1",
     "passport": "^0.4.1",
-    "passport-http-bearer": "^1.0.1"
+    "passport-http-bearer": "^1.0.1",
+    "stripe": "^8.75.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
@@ -35,5 +37,18 @@
   "engines": {
     "node": "10.15.0",
     "npm": "6.4.1"
-  }
+  },
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NoReactionTime/react-project-server.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/NoReactionTime/react-project-server/issues"
+  },
+  "homepage": "https://github.com/NoReactionTime/react-project-server#readme"
 }
